webapp/src/components/ActivityPage/ActivityPage.css
.ActivityPage .section-title {
  margin-bottom: 10px;
  font-weight: bolder;
  overflow: hidden;
}

.ActivityPage .Badge {
  float: right;
}

.ActivityPage .empty {
  margin-top: 40px;
  font-size: 16px;
  text-align: center;
  color: var(--gray);
}

.ActivityPage .sign-in {
  display: block;
  text-align: center;
  margin-top: 50px;
}

.ActivityPage .pending-transaction-list {
  margin-bottom: 30px;
}

